--- a/Wrapsy/app/src/main/AndroidManifest.xml
+++ b/Wrapsy/app/src/main/AndroidManifest.xml
@@ -13,6 +13,21 @@
         android:theme="@style/Theme.Wrapsy"
         tools:targetApi="31">
         <activity
+            android:name=".GiftQuizStep3Activity"
+            android:exported="false" />
+        <activity
+            android:name=".GiftQuizStep2Activity"
+            android:exported="false" />
+        <activity
+            android:name=".GiftQuizActivity"
+            android:exported="false" />
+        <activity
+            android:name=".GiftQuizStep1Activity"
+            android:exported="false" />
+        <activity
+            android:name=".PerfectGiftQuizActivity"
+            android:exported="false" />
+        <activity
             android:name=".LogIn"
             android:exported="false" />
         <activity
