--- a/Wrapsy/app/src/main/AndroidManifest.xml
+++ b/Wrapsy/app/src/main/AndroidManifest.xml
@@ -13,6 +13,12 @@
         android:theme="@style/Theme.Wrapsy"
         tools:targetApi="31">
         <activity
+            android:name=".CouponsActivity"
+            android:exported="false" />
+        <activity
+            android:name=".NotificationsActivity"
+            android:exported="false" />
+        <activity
             android:name=".AboutUs"
             android:exported="false" />
         <activity
