--- a/Wrapsy/app/src/main/AndroidManifest.xml
+++ b/Wrapsy/app/src/main/AndroidManifest.xml
@@ -13,7 +13,9 @@
         android:theme="@style/Theme.Wrapsy"
         tools:targetApi="31">
         <activity
-
+            android:name=".Profilelists"
+            android:exported="false" />
+        <activity
             android:name=".ProfileEditProfile"
             android:exported="false" />
         <activity
@@ -22,9 +24,8 @@
         <activity
             android:name=".RecommendedGiftsActivity"
             android:exported="false" />
-        <activity    
+        <activity
             android:name=".StoresActivity"
-
             android:exported="false" />
         <activity
             android:name=".OrdersActivity"
