--- a/Wrapsy/app/src/main/AndroidManifest.xml
+++ b/Wrapsy/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:theme="@style/Theme.Wrapsy"
         tools:targetApi="31">
         <activity
+            android:name=".ProductDetailActivity"
+            android:exported="false" />
+        <activity
             android:name=".OrderDetailsActivity"
             android:exported="false" />
         <activity
@@ -24,9 +27,8 @@
         <activity
             android:name=".RecommendedGiftsActivity"
             android:exported="false" />
-        <activity    
+        <activity
             android:name=".StoresActivity"
-
             android:exported="false" />
         <activity
             android:name=".OrdersActivity"
