--- a/Wrapsy/app/src/main/AndroidManifest.xml
+++ b/Wrapsy/app/src/main/AndroidManifest.xml
@@ -13,6 +13,15 @@
         android:theme="@style/Theme.Wrapsy"
         tools:targetApi="31">
         <activity
+            android:name=".ReviewsActivity"
+            android:exported="false" />
+        <activity
+            android:name=".SendInviteActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ShareWithFriendsActivity"
+            android:exported="false" />
+        <activity
             android:name=".OrderDetailsActivity"
             android:exported="false" />
         <activity
@@ -24,9 +33,8 @@
         <activity
             android:name=".RecommendedGiftsActivity"
             android:exported="false" />
-        <activity    
+        <activity
             android:name=".StoresActivity"
-
             android:exported="false" />
         <activity
             android:name=".OrdersActivity"
