--- a/Wrapsy/app/src/main/AndroidManifest.xml
+++ b/Wrapsy/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:theme="@style/Theme.Wrapsy"
         tools:targetApi="31">
         <activity
+            android:name=".ProfileListInfoActivity"
+            android:exported="false" />
+        <activity
             android:name=".PlantillaStoreActivity"
             android:exported="false" />
         <activity
