--- a/Wrapsy/app/src/main/AndroidManifest.xml
+++ b/Wrapsy/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:theme="@style/Theme.Wrapsy"
         tools:targetApi="31">
         <activity
+            android:name=".CardInformationAddCardActivity"
+            android:exported="false" />
+        <activity
             android:name=".ChooseCardActivity"
             android:exported="false" />
         <activity
@@ -91,7 +94,7 @@
             android:name=".GiftQuizStep2Activity"
             android:exported="false" />
         <activity
-            android:name=".GiftQuizActivity"
+            android:name=".GiftQuizEndActivity"
             android:exported="false" />
         <activity
             android:name=".GiftQuizStep1Activity"
