--- a/Wrapsy/app/src/main/AndroidManifest.xml
+++ b/Wrapsy/app/src/main/AndroidManifest.xml
@@ -13,6 +13,15 @@
         android:theme="@style/Theme.Wrapsy"
         tools:targetApi="31">
         <activity
+            android:name=".BasketCardConfirmationActivity"
+            android:exported="false" />
+        <activity
+            android:name=".BasketTotalActivity"
+            android:exported="false" />
+        <activity
+            android:name=".BasketCardInformationActivity"
+            android:exported="false" />
+        <activity
             android:name=".CardInformationAddCardActivity"
             android:exported="false" />
         <activity
