Error icono basket

--- a/Wrapsy/app/src/main/AndroidManifest.xml
+++ b/Wrapsy/app/src/main/AndroidManifest.xml
@@ -82,7 +82,7 @@
             android:name=".moreOptionspurchaseHistory"
             android:exported="false" />
         <activity
-            android:name=".moreOptions"
+            android:name=".MoreOptions"
             android:exported="false" />
         <activity
             android:name=".GiftQuizStep3Activity"
@@ -113,7 +113,6 @@
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
