--- a/Wrapsy/gradle/libs.versions.toml
+++ b/Wrapsy/gradle/libs.versions.toml
@@ -11,6 +11,7 @@ activity = "1.10.1"
 constraintlayout = "2.2.1"
 firebaseAuthKtx = "23.2.0"
 firebaseDatabase = "21.0.0"
+firebaseFirestoreKtx = "25.1.4"
 
 
 [libraries]
@@ -23,6 +24,7 @@ material = { group = "com.google.android.material", name = "material", version.r
 androidx-activity = { group = "androidx.activity", name = "activity", version.ref = "activity" }
 androidx-constraintlayout = { group = "androidx.constraintlayout", name = "constraintlayout", version.ref = "constraintlayout" }
 firebase-database = { group = "com.google.firebase", name = "firebase-database", version.ref = "firebaseDatabase" }
+firebase-firestore-ktx = { group = "com.google.firebase", name = "firebase-firestore-ktx", version.ref = "firebaseFirestoreKtx" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
