--- a/Wrapsy/app/src/main/AndroidManifest.xml
+++ b/Wrapsy/app/src/main/AndroidManifest.xml
@@ -13,6 +13,12 @@
         android:theme="@style/Theme.Wrapsy"
         tools:targetApi="31">
         <activity
+            android:name=".producto_card"
+            android:exported="false" />
+        <activity
+            android:name=".product_list"
+            android:exported="false" />
+        <activity
             android:name=".BasketCardConfirmationActivity"
             android:exported="false" />
         <activity
@@ -125,6 +131,7 @@
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
