--- a/Wrapsy/gradle/libs.versions.toml
+++ b/Wrapsy/gradle/libs.versions.toml
@@ -12,6 +12,8 @@ constraintlayout = "2.2.1"
 firebaseAuthKtx = "23.2.0"
 firebaseDatabase = "21.0.0"
 firebaseFirestoreKtx = "25.1.4"
+firebaseStorageKtx = "21.0.1"
+firebaseCrashlyticsBuildtools = "3.0.3"
 
 
 [libraries]
@@ -25,6 +27,8 @@ androidx-activity = { group = "androidx.activity", name = "activity", version.re
 androidx-constraintlayout = { group = "androidx.constraintlayout", name = "constraintlayout", version.ref = "constraintlayout" }
 firebase-database = { group = "com.google.firebase", name = "firebase-database", version.ref = "firebaseDatabase" }
 firebase-firestore-ktx = { group = "com.google.firebase", name = "firebase-firestore-ktx", version.ref = "firebaseFirestoreKtx" }
+firebase-storage-ktx = { group = "com.google.firebase", name = "firebase-storage-ktx", version.ref = "firebaseStorageKtx" }
+firebase-crashlytics-buildtools = { group = "com.google.firebase", name = "firebase-crashlytics-buildtools", version.ref = "firebaseCrashlyticsBuildtools" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
